[package]
name = "filmaffinity-to-letterboxd"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.11.14"
scraper = "0.16.0"
select = "0.6.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
fantoccini = "0.22.0"
itertools = "0.14.0"
clap = { version = "4.5.54", features = ["derive"] }

[profile.release]
opt-level = 3
