[package]
name = "fa-to-letterboxd"
version = "0.1.0"
edition = "2024"
authors = ["GabRodPul <103140108+GabRodPul@users.noreply.github.com>"]
description = "A simple webscraping tool to convert a FilmAffinity profile to Letterboxd's import format"
readme = "README.md"
license = "GPL-2.0-or-later"
homepage = "https://github.com/GabRodPul/filmaffinity-to-letterboxd"
repository = "https://github.com/GabRodPul/filmaffinity-to-letterboxd"
keywords = ["cli", "filmaffinity", "letterboxd", "webscraping", "chromedriver", "geckodriver"]
categories = ["command-line-utilities"]

[dependencies]
select = "0.6.0"
tokio = { version = "1.27.0", features = ["full"] }
itertools = "0.14.0"
clap = { version = "4.5.54", features = ["derive"] }
chaser-oxide = "0.1.0"
futures = "0.3.31"
fastrand = "2.3.0"
anyhow = "1.0.100"
fancy-log = "0.1.1"

[profile.release]
opt-level = 3
